--- a/las.html
+++ b/las.html
@@ -51,15 +51,16 @@
   <a-scene environment="preset: default"
          background="color: #AAAAAA"
          keyboard-shortcuts="enterVR: false;"
-         vr-mode-ui="enabled: false;"
-         download-button>
+         vr-mode-ui="enabled: true;"
+         download-button
+         stats>
 
   <!-- CAMERA -->
   <!-- <a-camera id="camera" camera-logger position="553837 4118282 624" rotation="-36 -256 0" > -->
   <a-camera id="camera" position="0 2 0">
-    <a-entity id="download-buttonid" geometry="primitive: box" material="color: red" position="-3 -1 -3"></a-entity>
+    <a-entity class="button" id="download-buttonid" geometry="primitive: box" material="color: red" position="-3 -1 -3"></a-entity>
 
-    <a-entity id="loadurl-buttonid" geometry="primitive: box" material="color: purple" position="3 -1 -3"></a-entity>
+    <a-entity class="button" id="loadurl-buttonid" geometry="primitive: box" material="color: purple" position="3 -1 -3"></a-entity>
 
     <a-entity position="0 1.5 -2" id="urltext" textarea="backgroundColor:white; color:black; cols:10; rows:1;value:5;"></a-entity>
 
@@ -67,11 +68,11 @@
   </a-camera>
 
   <!-- CONTROLS -->
-  <a-entity oculus-touch-controls="hand: left">
-    <a-sphere raycaster="objects:#pointcloud" trigger id="sph" position="0 0 -0.25" material="color:red" scale="0.5 0.5 0.5"></a-sphere>
-    </a-entity>
+  <a-entity oculus-touch-controls="hand: left" raycaster="objects:#pointcloud; showLine:true" trigger>
+    <!-- <a-sphere  id="sph" position="0 0 50" material="color:red" scale="0.2 0.2 0.2"></a-sphere> -->
+  </a-entity>
   <a-entity oculus-touch-controls="hand: right" trigger ></a-entity>
-  <a-entity cursor="rayOrigin:mouse"></a-entity>
+  <a-entity cursor="rayOrigin:mouse objects:"></a-entity>
 
   <!-- POINTCLOUD -->
 <a-entity
@@ -81,7 +82,7 @@
   scale="1 1 1"
   classifier 
   lasloader="
-    url: https://rawhitten.github.io/pdal.southwest.09242022.laz;
+    url: https://rawhitten.github.io/chunk.laz;
     downid: #download-buttonid;
     cameraEl: #camera;
     pointcloudColoring: classification; 
