classifying works continuously

--- a/las.html
+++ b/las.html
@@ -27,7 +27,7 @@
 
   <!-- CONTROLS -->
   <!--  -->
-  <a-entity oculus-touch-controls="hand: left" raycaster="objects: .collidable; showLine:true; near: 0.1; far:10" trigger>
+  <a-entity oculus-touch-controls="hand: left" raycaster="objects: .collidable; showLine:true; near: 0.1; far:100 autoRefresh:false" trigger>
     <!-- <a-sphere  id="sph" position="0 0 50" material="color:red" scale="0.2 0.2 0.2"></a-sphere> -->
   </a-entity>
   <a-entity oculus-touch-controls="hand: right" trigger ></a-entity>
